--- a/sul.html
+++ b/sul.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            background-color: salmon;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>welcome</h1>
+    <h1>welcome to Sul's page</h1>
 </body>
 </html>
